components/CreateList/CreateList.module.css
.CreateList {
	border-radius: 4px;
	border: 2px black solid;
	border: 2px rgb(77, 11, 11) solid;

	width: fit-content;

	margin-inline: auto;
	padding: 2rem;

	animation: slideInDown 1.5s forwards;

	/* transition: width 0.5s ease; */

	/* display: flex;
	flex-direction: column;
	gap: 0.5rem; */
}

.CreateList > p,
.CreateList > div {
	margin-bottom: 0.5rem;
}

.CreateList > * {
	outline: 2px dotted yellow;
}

.radioWrapper {
	line-height: 2;

	width: 150px;
	/* width: 100%; */

	/* transition: all 1.5s; */

	/* background-color: hsla(104, 85%, 75%, 0.5); */
}

.widen {
	/* animation: widen 1.5s forwards; */
	/* transition: all 1.5s; */
	width: 300px;
}

.radioWrapper label + label {
	margin-left: 0.5rem;
}

.radioWrapper label input[type='radio'] {
	margin-right: 0.25rem;
}

.radioWrapper label input[type='text'] {
	max-width: 65%;
	max-height: 1.75rem;
	padding-left: 0.25rem;

	animation: widen 3s forwards;
}

.buttonWrapper {
	white-space: nowrap;
}

.buttonWrapper button + button {
	margin-left: 0.5rem;
}

.buttonWrapper button {
	background-color: hsl(300, 85%, 45%);
	border: 1px solid hsl(300, 85%, 30%);
	border-radius: 5px;

	padding-inline: 2rem;

	text-wrap: nowrap;
}

@media (hover: hover) {
	/* when hover is supported */
	.CreateList button:hover {
		background-color: rgb(103, 38, 103);
		border-color: rgb(26, 255, 0);
		color: white;
		transition:
			background-color 0.75s,
			border-color 0.75s,
			color 0.25s;

		cursor: pointer;
	}
}

@keyframes slideInDown {
	from {
		transform: translateX(0%) translateY(-200%);
	}
	to {
		transform: translateX(0%) translateY(0%);
	}
}

@keyframes widen {
	from {
		width: 10%;
	}
	to {
		width: 100%;
	}
}

